Add actor OIB to booking, drop legacy config flags